--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "DecouverteAngular": {
+    "DecouverteAngular_lesServices": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/decouverte-angular",
+            "outputPath": "dist/decouverte-angular-les-services",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -60,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "DecouverteAngular:build:production"
+              "browserTarget": "DecouverteAngular_lesServices:build:production"
             },
             "development": {
-              "browserTarget": "DecouverteAngular:build:development"
+              "browserTarget": "DecouverteAngular_lesServices:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -71,7 +71,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "DecouverteAngular:build"
+            "browserTarget": "DecouverteAngular_lesServices:build"
           }
         },
         "test": {
@@ -87,11 +87,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "../node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/styles.css"
             ],
-            "scripts": [
-            "../node_modules/bootstrap/dist/js/bootstrap.min.js"]
+            "scripts": []
           }
         }
       }
