--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "decouverte-angular",
+  "name": "decouverte-angular-les-services",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
